// PyShiftAE.proto
// Protocol Buffers definition for PyShiftAE, App

syntax = "proto3";

package PyShiftAE;

message EmptyRequest {
    // Empty for methods with no input
}

message ProjectRequest {
    // Fields for project request if needed
}

message ProjectResponse {
    string session_id = 1; // Session ID for the Project instance
}

message StringResponse {
    string value = 1;
}

service AppService {
    rpc GetProject(EmptyRequest) returns (ProjectResponse);
    rpc BeginUndoGroup(StringResponse) returns (EmptyRequest);
    rpc EndUndoGroup(EmptyRequest) returns (EmptyRequest);
    rpc ReportInfo(StringResponse) returns (EmptyRequest);
}
//"C:\Program Files\grpc\bin\protoc.exe" --cpp_out=. --grpc_out=. --plugin=protoc-gen-grpc="C:\Program Files\grpc\bin\grpc_cpp_plugin.exe" App.proto